finalize new blog post about MockMvc

--- a/testing-spring-boot-applications-with-mockmvc/src/main/resources/templates/dashboard.html
+++ b/testing-spring-boot-applications-with-mockmvc/src/main/resources/templates/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      lang="en">
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Dashboard</title>
