add full roundtrip HtmlUnit test

--- a/spring-boot-thymeleaf-testing/src/main/resources/templates/customers.html
+++ b/spring-boot-thymeleaf-testing/src/main/resources/templates/customers.html
@@ -40,12 +40,12 @@
             email address.
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" id="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
     <div class="col-8">
       <h2>All Customers</h2>
-      <table class="table">
+      <table class="table" id="customer-list">
         <thead>
         <tr>
           <th scope="col">#</th>
